<resources>
    <string name="app_name">点钱</string>
    <string name="tb_load_loading">加载中</string>
    <string name="tb_load_failed">加载失败</string>
    <string name="tb_load_end">加载完成</string>
    <string name="network_not_good">当前网络状态不太好</string>
    <string name="tb_error_unknown">未知错误</string>
    <string name="tb_error_server">服务器错误</string>
    <string name="tb_error_net">网络错误</string>
    <string name="tb_load_failed_desc">网络不给力，请再试一次</string>
    <string name="no_data">暂无数据</string>
    <string name="tb_now_loading">"正在加载中..."</string>
    <string name="tb_confirm">确定</string>

    <string name="max_borrow">最高%s元</string>
    <string name="fee">日利率%s起</string>

    <string name="top_text">银行列表</string>
    <string name="center_text">热门卡片</string>
</resources>
