<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/tbLoadingView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleSmall"
            android:layout_marginRight="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/tb_load_loading"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/tbFailView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tb_load_failed" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/tbEndView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tb_load_end"
            android:textColor="@android:color/darker_gray" />
    </FrameLayout>
</FrameLayout>