<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white">

    <LinearLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textSize="14sp" />-->
    </LinearLayout>

    <!-- android:visibility="gone" -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/failLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                style="@style/ll_wwv"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="120dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/img_no_data" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/tb_load_failed_desc"
                    android:textColor="@color/transparent" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/finishLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                style="@style/ll_wwv"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="120dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/imgFinish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/img_no_data" />

                <TextView
                    android:id="@+id/tvFinishDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/no_data"
                    android:textColor="@color/transparent" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvAction"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/selector_button_shade"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/tb_load_failed"
            android:textColor="@color/color_depth_amount"
            android:visibility="gone"
            tools:text="ACTION"
            tools:visibility="visible" />

    </LinearLayout>

</FrameLayout>